Change from List to Set and add Tests